# newdaq

./: Cargo.toml  daq.sh  default.nix  diskmgr.sh  gb40.yaml  init.sh  mode.yaml  run.sh  run_bb.sh  sample.yaml  shutdown.sh  shutdown.yaml  start.sh  start.yaml  start_bb.sh  state.yaml  status.py  status.yaml  stop.sh  stop.yaml  temperature.yaml
monitor_server/: index.html  state.js  status.js
src/: ctrl_msg.rs  lib.rs  main.rs
